--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 @import url("https://unpkg.com/@tailwindcss/typography@0.2.x/dist/typoography.min.css");
 @import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
-@import url("http://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cormorant+Garamond:ital,wght@1,300&family=Indie+Flower&family=Poiret+One&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Yanone+Kaffeesatz:wght@200&display=swap");
 
 
 .cursive {
-  font-family: "Amatic SC", cursive;
-  font-weight: 700;
+  font-family: "Poiret One", cursive;
+  font-weight: 600;
 }
 
 .prose img {
