Finished homepage styling

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
 
 
 .cursive {
-  font-family: "Poiret One", cursive;
-  font-weight: 600;
+  font-family: "Yanone Kaffeesatz", cursive;
+  font-weight: 900;
 }
 
 .prose img {
