Adjusted and added styling on various components, as well as updated README screenshots

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://unpkg.com/@tailwindcss/typography@0.2.x/dist/typoography.min.css");
 @import url("https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css");
-@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&family=Cormorant+Garamond:ital,wght@1,300&family=Indie+Flower&family=Poiret+One&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Yanone+Kaffeesatz:wght@200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200&display=swap');
 
 
 .cursive {
